fix: Change word spacing in about

--- a/css/style.css
+++ b/css/style.css
@@ -497,9 +497,10 @@ div.skills {
     height: 190px;
     color: #333;
     background-color: #ccc;
-    padding: 20px 80px 20px 90px;
+    padding: 5px 80px 15px 80px;
     line-height: 1.5;
-    text-justify: distribute;
+    text-align: justify;
+    text-justify: inter-word;
 }
 
 .bio-pic {
